--- a/ProjectHost/Web.config
+++ b/ProjectHost/Web.config
@@ -11,6 +11,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
     <add key="GoogleOAuth2:ClientId" value="" />
     <add key="GoogleOAuth2:ClientSecret" value="" />
   </appSettings>
