--- a/ProjectHost/Web.config
+++ b/ProjectHost/Web.config
@@ -19,9 +19,14 @@
     <authentication mode="None"/>
     <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.6"/>
-    <httpRuntime targetFramework="4.6"/>
+    <httpRuntime targetFramework="4.6" executionTimeout="9000" maxRequestLength="102400"/>
   </system.web>
   <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="2000000000" />
+      </requestFiltering>
+    </security>
     <modules>
       <remove name="FormsAuthentication"/>
     </modules>
